--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -8,7 +8,7 @@
     <string name="dialog_delete_message">移除所选项目？</string>
     <string name="add_package_to_title">添加应用</string>
     <string name="enabled_title">启用</string>
-    <string name="lyricsGetterStatus_title">LyricsGetter 連線狀態</string>
+    <string name="lyricsGetterStatus_title">LyricsGetter 连接状态</string>
     <string name="ignored_apps_title">忽略应用</string>
     <string name="unsupport_rom_summary">不支持当前 ROM</string>
     <string name="unsupport_rom_title">不支持</string>
