--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -8,8 +8,12 @@
     <string name="dialog_delete_message">移除所选项目？</string>
     <string name="add_package_to_title">添加应用</string>
     <string name="enabled_title">启用</string>
-    <string name="lyricsGetterStatus_title">LyricsGetter 连接状态</string>
+    <string name="lyricsGetterStatus_title">Lyrics Getter 连接状态</string>
     <string name="ignored_apps_title">忽略应用</string>
+    <string name="ignored_rules_title">导入忽略应用规则</string>
+    <string name="ignored_rules_summary">从 Lyrics Getter 导入Hook规则, 并将规则内的APP进行忽略，避免重复输出歌词。</string>
     <string name="unsupport_rom_summary">不支持当前 ROM</string>
     <string name="unsupport_rom_title">不支持</string>
+    <string name="toast_cannot_start_lyricsgetter">很抱歉， Lyrics Getter 启动失败。请检查是否正确安装LyricsGetter。</string>
+    <string name="toast_cannot_get_rules">很抱歉，忽略应用规则更新失败，请检查您的网络配置。</string>
 </resources>
