--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -16,4 +16,5 @@
     <string name="unsupport_rom_title">不支援</string>
     <string name="toast_cannot_start_lyricsgetter">很抱歉，LyricsGetter啟動失敗。請檢查是否正確安裝LyricsGetter。</string>
     <string name="toast_cannot_get_rules">很抱歉，忽略應用程式規則更新失敗，請檢查您的網路設定。</string>
+    <string name="toast_get_notification_permission">尚未取得通知權限，請在下一個畫面中允許本應用程式的通知權限。</string>
 </resources>
